[package]
name = "simple-rproxy"
version = "0.1.2"
edition = "2021"

[dependencies]
# Basic deps
ahash = "0.8"
anyhow = "=1.0.76"
arc-swap = "1.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "sync",
    "parking_lot",
] }


# Socket deps
socket2 = { version = "0.5", features = ["all"] }

# Relay deps
realm_io = { version = "0.5", features = ["brutal-shutdown"] }

# Allocator
mimalloc = "0.1"

# Log deps
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "chrono",
    "env-filter",
    "parking_lot",
] }
once_cell = { version = "1.19", default-features = false }

[build-dependencies]
anyhow = "=1.0.76"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false
panic = "unwind"
strip = true
