[package]
name = "simple-rproxy"
version = "0.7.0-alpha.1"
edition = "2024"
rust-version = "1.86.0"

[dependencies]
# Basic deps
anyhow = "1.0.98"
arc-swap = "1.7.1"
clap = { version = "4.5.37", features = ["derive"] }
console-subscriber = { version = "0.4.1", features = ["parking_lot"], optional = true }
const_for = "0.1.5"
dashmap = { version = "6.1.0", features = ["inline", "serde"] }
foldhash = "0.1.5"
human-format-next = "0.2.2"
macro-toolset = { version = "0.8.3", default-features = false }
mimalloc = "0.1.46"
# ppp = "2.3.0"
rkyv = "0.8.10"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
socket2 = { version = "0.5.9", features = ["all"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
    "time",
    "sync",
    "parking_lot",
    "io-util",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter", "parking_lot"] }

[patch.crates-io]
# ppp = { git = "https://github.com/misalcedo/ppp.git " }

[target.'cfg(unix)'.dependencies]
# Relay deps
tokio-splice2 = "0.3.0-alpha.8"

[build-dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"

[features]
feat-tokio-debug = ["dep:console-subscriber"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false
panic = "unwind"
strip = true

# cargo-multivers
[package.metadata.multivers.x86_64]
cpus = ["x86-64", "x86-64-v2", "x86-64-v3", "x86-64-v4"]

# === Lints config ===

[lints]
clippy.allow_attributes_without_reason = "warn"
clippy.assertions_on_result_states = "warn"
clippy.assigning_clones = "warn"
clippy.bool_to_int_with_if = "warn"
clippy.cognitive_complexity = "warn"
clippy.create_dir = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.default_trait_access = "warn"
clippy.disallowed_script_idents = "deny"
clippy.doc_link_with_quotes = "warn"
clippy.doc_markdown = "warn"
clippy.else_if_without_else = "deny"
clippy.enum_glob_use = "warn"
clippy.filetype_is_file = "warn"
clippy.inefficient_to_string = "warn"
clippy.mem_forget = "warn"
clippy.missing_panics_doc = "warn"
clippy.mod_module_files = "deny"
clippy.multiple_inherent_impl = "warn"
clippy.mutex_atomic = "warn"
clippy.mutex_integer = "warn"
clippy.needless_continue = "warn"
clippy.panic = "warn"
clippy.significant_drop_in_scrutinee = "warn"
clippy.todo = "warn"
clippy.unimplemented = "warn"
clippy.unreachable = "warn"
clippy.wildcard_dependencies = "deny"
clippy.wildcard_imports = "warn"
rust.unsafe_code = "warn"
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
